--- a/style.css
+++ b/style.css
@@ -8,10 +8,15 @@ html, body {
     font-family: Open Sans, Arial;
     color: #454545;
     font-size: 16px;
-    margin: 2em auto;
+/*     margin: 0 auto 0 auto; */
     max-width: 100%;
     padding: 1em;
     text-align: justify;
+}
+
+.tableFormLabel {
+    text-align: right;
+    padding-right: 0.5em;
 }
 
 a {
@@ -96,7 +101,7 @@ h5 {
 }
 
 .bigFurboxOuter {
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 0px 64px rgba(0, 0, 0, 0.35);
     border-radius: 0 0 16px 0;
     background-color: #f9f9f9;
     box-sizing: border-box;
@@ -157,3 +162,73 @@ h5 {
     flex: 1 1 auto;
     object-fit: contain;
 }
+
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+li.columngap > a {
+    text-decoration: none;
+}
+
+.sub_content {
+    overflow-x: auto;
+    white-space: nowrap;
+    margin: 0 auto;
+    padding: 0 3vw;
+    scrollbar-width: thin;
+}
+
+.sub_content::-webkit-scrollbar {
+    height: 16px;
+}
+
+.sub_content::-webkit-scrollbar-thumb {
+    background-color: #d1d1d1;
+    border-radius: 16px;
+    background-clip: padding-box;
+    border: 4px solid transparent;
+}
+
+.sub_content::-webkit-scrollbar-track {
+    background-color: #f0f0f0;
+    border-radius: 16px;
+    background-clip: padding-box;
+    border: 4px solid transparent;
+}
+
+.sub_menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    column-count: 7;
+    margin: 0;
+    height: 75px;
+    padding: 0;
+}
+
+.columngap {
+    margin: 0 24px;
+}
+
+.sub_link {
+    display: inline-block;
+    font-size: 1rem;
+    height: 24px;
+    color: #111111;
+    transition: all 200ms;
+    border-bottom: 1px solid rgba(0,0,0,0);
+}
+
+.sub_link:hover {
+    transition: all 100ms;
+    border-bottom: 1px solid #111111
+}
+
+.selected {
+    border-bottom: 1px solid #111111;
+}
+
