--- a/style.css
+++ b/style.css
@@ -3,15 +3,38 @@
     --gaps: 10px;
 }
 
-html, body {
+
+html {
     background-color: #F0EDE5;
     font-family: Open Sans, Arial;
     color: #454545;
     font-size: 16px;
-/*     margin: 0 auto 0 auto; */
-    max-width: 100%;
-    padding: 1em;
     text-align: justify;
+}
+
+header {
+    display: inline-block;
+    height: 74px;
+    margin: 0 1em 0 1em;
+}
+
+contents {
+    margin: 0 1em 0 1em;
+    display: block;
+}
+
+overlay {
+    position: fixed; /* Sit on top of the page content */
+    display: none; /* Hidden by default */
+    width: 100%; /* Full width (cover the whole page) */
+    height: 100%; /* Full height (cover the whole page) */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+    z-index: 0; /* Specify a stack order in case you're using a different order for other elements */
+    cursor: pointer; /* Add a pointer on hover */
 }
 
 .tableFormLabel {
@@ -84,20 +107,6 @@ h5 {
     align-items: center;
     width: 100%;
     height: 100%;
-}
-
-.overlay {
-    position: fixed; /* Sit on top of the page content */
-    display: none; /* Hidden by default */
-    width: 100%; /* Full width (cover the whole page) */
-    height: 100%; /* Full height (cover the whole page) */
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0,0,0,0.5); /* Black background with opacity */
-    z-index: 0; /* Specify a stack order in case you're using a different order for other elements */
-    cursor: pointer; /* Add a pointer on hover */
 }
 
 .bigFurboxOuter {
