--- a/style.css
+++ b/style.css
@@ -42,6 +42,25 @@ overlay {
     padding-right: 0.5em;
 }
 
+.tableChartLabel {
+    text-align: right;
+    padding-right: 0.5em;
+    border-right: 1px solid #AAA;
+}
+
+.tableDataNumber {
+    font-weight:bold;
+    text-align:right;
+    padding-left: 0.5em
+}
+
+.tableBarChart {
+    display:inline-block;
+    margin-left: 0.5em;
+    padding: 0;
+    background: #444
+}
+
 a {
     color: #888;
 }
@@ -94,6 +113,14 @@ h5 {
     object-fit: cover;
     width: 100%;
     height: var(--img-height);
+}
+
+.transparent_panel {
+    margin: 10px;
+    padding: 0 20px 10px 20px;
+    border-radius: 0 0 16px 0;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
+    background-color: #f9f9f9;
 }
 
 .searchresults {
