watermark on the charts

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 
 idiv {
     display: inline-block;
-    padding: 
 }
 
 html {
@@ -141,6 +140,19 @@ h5 {
     border-radius: 0 0 16px 0;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
     background-color: #f9f9f9;
+}
+
+.chart_container {
+    padding: 0.1px 20px 20px 20px;
+    border-radius: 0 0 16px 0;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+    background: rgba(249,249,249,0.95);
+}
+
+.chart_bgimg {
+    padding: 10px;
+    flex: 1 0;
+    background: no-repeat center/80% url("header.png");
 }
 
 .searchresults {
