--- a/style.css
+++ b/style.css
@@ -57,6 +57,10 @@ panelnavwrapper {
     height: inherit;
 }
 
+table.stat {
+    width: 100%;
+}
+
 .tableFormLabel {
     text-align: right;
     padding-right: 0.5em;
@@ -64,15 +68,17 @@ panelnavwrapper {
 
 .tableChartLabel {
     text-align: right;
-    padding-right: 0em;
-/*     border-right: 1px solid #AAA; */
+    padding-right: 0.33em;
+    width: 0; /* this is a hack; the label must always contain non-breakables! (e.g. &nbsp;) */
+    border-right: 1px solid #AAA;
 }
 
 .tableDataNumber {
     font-weight:bold;
-    padding-left: 0.5em;
-    display: inline;
+    padding-left: 0.33em;
+    text-align: right;
     font-size: 90%;
+    width: 0; /* this is a hack; the label must always contain non-breakables! (e.g. &nbsp;) */
 }
 
 .stackDataNumber {
@@ -89,7 +95,7 @@ panelnavwrapper {
 }
 
 .tableBarChart {
-    display:inline-block;
+    display: inline-block;
     padding: 0;
     background: #444
 }
