simplified html for proportion bar

--- a/style.css
+++ b/style.css
@@ -101,14 +101,23 @@ table.stat {
 }
 
 tablebarchartstack {
-    display: inline-block;
+    display: block;
     margin: 3px 0 3px 0;
     padding: 0;
     background: #f00;
     font-size: 90%;
     text-align: center;
     font-weight: bold;
-    vertical-align: middle;
+    box-sizing: border-box;
+    float: left;
+}
+
+tablebarchartstack.light {
+    color: #F9F9F9;
+}
+
+tablebarchartstack.dark {
+    color: #444;
 }
 
 stacklabel {
