--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
     --img-height: 280px;
+    --shopbannerimg-height: 50px;
     --gaps: 10px;
 }
 
@@ -158,9 +159,12 @@ h5 {
     line-height: 1.3rem;
 }
 
-.furBox {
+/* BEGIN OF FURBOX */
+
+furbox {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
     border-radius: 0 0 16px 0;
+    display: block;
     float: left;
     margin: 10px;
     background-color: #f9f9f9;
@@ -173,42 +177,98 @@ h5 {
     animation-delay: 0.40s;
 }
 
-.infoBox {
-    padding-bottom: 0.5rem;
+furbox > .infoBox {
+    padding: 0.5rem;
 }
 
-.imgBox {
+furbox > .imgBox {
     display: block;
     height: var(--img-height);
     overflow: hidden;
 }
 
-.imgBox img {
+furbox > .imgBox img {
     object-fit: cover;
     width: 100%;
     height: var(--img-height);
 }
 
-.transparent_panel {
-    margin: 10px;
-    padding: 0 20px 10px 20px;
-    border-radius: 0 0 16px 0;
+/* END OF FURBOX */
+
+
+/* BEGIN OF WORSHOPBOX */
+
+workshopbox {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
-    background-color: #f9f9f9;
-}
-
-.chart_container {
-    height: calc(100% - 20px);
-    padding: 0.1px 20px 20px 20px;
-    border-radius: 0 0 16px 0;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
-    background: rgba(251,251,252,0.94); /* will make the chartbox coloured to be #FAFAFA */
-}
-
-.chart_bgimg {
+    border-radius: 4px;
+    display: block;
+    float: left;
     margin: 10px;
-    background: no-repeat center/80% url("header.png");
+    background-color: #f9f9f9;
+    position: relative;
+    box-sizing: border-box;
+    width: calc(50% - 2*var(--gaps));
+    animation: smooth 1.5s backwards;
+    animation-delay: 0.40s;
 }
+
+@media (min-width: 1308px) {
+    workshopbox {
+        width: calc(33% - 3 * var(--gaps));
+    }
+}
+
+@media (max-width: 880px) {
+    workshopbox {
+        width: calc(100% - var(--gaps));
+    }
+}
+
+workshopbox > .imgBox {
+    display: block;
+    margin: 8px 10px 0 10px;
+    width: calc(100% - 20px);
+    height: var(--shopbannerimg-height);
+    
+/*     border: 1px solid red; */
+}
+
+workshopbox > .imgBox img {
+    display: inline;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+workshopbox > .infoBox {
+    margin: 10pt 10px 10pt 10px;
+    text-align: center;
+/*     border: 1px solid black; */
+}
+
+workshopbox > .infoBox > shopname {
+    line-height: 14pt;
+    font-size: 14pt;
+    font-weight: 700;
+    display: inline;
+    color: #444;
+}
+
+workshopbox > .infoBox > shopinfo {
+    margin-left: 2em;
+    line-height: 12pt;
+    font-size: 12pt;
+    display: inline;
+}
+
+workshopbox > .infoBox > shopinfo > a {
+    color: #444;
+}
+
+/* END OF WORKSHOPBOX */
+
+
+/* BEGIN OF SEARCHRESULTS */
 
 .searchresults {
     margin: 1rem;
@@ -239,7 +299,6 @@ h5 {
     width: calc(100% - 2 * var(--gaps));
     height: calc(100% - 1 * var(--gaps));
 }
-
 
 .imgBoxLarge {
     display: block;
@@ -285,6 +344,36 @@ h5 {
     flex: 1 1 auto;
     object-fit: contain;
 }
+
+/* END OF SEARCHRESULTS */
+
+
+/* BEGIN OF STATS */
+
+.transparent_panel {
+    margin: 10px;
+    padding: 0 20px 10px 20px;
+    border-radius: 0 0 16px 0;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
+    background-color: #f9f9f9;
+}
+
+.chart_container {
+    height: calc(100% - 20px);
+    padding: 0.1px 20px 20px 20px;
+    border-radius: 0 0 16px 0;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+    background: rgba(251,251,252,0.94); /* will make the chartbox coloured to be #FAFAFA */
+}
+
+.chart_bgimg {
+    margin: 10px;
+    background: no-repeat center/80% url("header.png");
+}
+
+/* END OF STATS */
+
+
 
 
 ul.sub_menu {
