--- a/style.css
+++ b/style.css
@@ -63,6 +63,25 @@ overlay {
     cursor: pointer; /* Add a pointer on hover */
 }
 
+dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+dropdown > content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+dropdown:hover > content {
+  display: block;
+}
+
 table.stat {
     width: 100%;
 }
