--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@
     --textborder: rgba(0,0,0,0.5);
 }
 
+/*form table {
+    border: 1px solid black;
+}
+form table td {
+    border: 1px solid red;
+}*/
+
 thoushaltnotobservestthisblock {
     display: none;
 }
@@ -61,25 +68,6 @@ overlay {
     background-color: rgba(0,0,0,0.5); /* Black background with opacity */
     z-index: 0; /* Specify a stack order in case you're using a different order for other elements */
     cursor: pointer; /* Add a pointer on hover */
-}
-
-dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-dropdown > content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 12px 16px;
-  z-index: 1;
-}
-
-dropdown:hover > content {
-  display: block;
 }
 
 table.stat {
@@ -181,6 +169,28 @@ h5 {
     margin: 0.5rem;
     font-weight: 400;
     line-height: 1.3rem;
+}
+
+floatbox {
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    display: block;
+    margin: 10px 20px;
+    padding: 0.5ex 1em;
+    background-color: #f9f9f9;
+    box-sizing: border-box;
+}
+
+#colour_palette_showoff tbody td {
+    font-size: 90%;
+}
+
+td .colour_swatch {
+    width: 1.33em;
+}
+
+td .rainbowbox {
+    background-image: linear-gradient(to right, #EC6A69,#F0994F,#CCAB13,#9ABA28,#00AD71,#00C6B7,#00BFE6,#77B1F6,#C89CE4,#DF6D9D,#EC6A69);
 }
 
 /* BEGIN OF FURBOX */
