--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ td .colour_swatch {
 }
 
 td .rainbowbox {
-    background-image: linear-gradient(to right, #EC6A69,#F0994F,#CCAB13,#9ABA28,#00AD71,#00C6B7,#00BFE6,#77B1F6,#C89CE4,#DF6D9D,#EC6A69);
+    background-image: linear-gradient(to right, #EC6A69,#F0994F,#CCAB13,#9ABA28,#59C36A,#00C6B7,#00BFE6,#96AAF6,#C89CE4,#DF6D9D,#EC6A69);
 }
 
 /* BEGIN OF FURBOX */
