--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 * {
+    --site-background: #E5EDF4;
+    --furbox-background: #F9F9F9;
+    --site-text-colour: #3A3A3A;
+    --site-font-size: 16px;
     --img-height: 280px;
     --shopbannerimg-height: 50px;
     --gaps: 10px;
@@ -23,12 +27,11 @@ idiv {
 }
 
 html {
-    background-color: #E5EDF4;
+    background: var(--site-background);
     font-family: Open Sans, Arial;
-    color: #444;
-    font-size: 16px;
+    color: var(--site-text-colour);
+    font-size: var(--site-font-size);
     text-align: justify;
-    z-index: 10;
 }
 
 header {
@@ -112,7 +115,7 @@ table.stat {
 .tableBarChart {
     display: inline-block;
     padding: 0;
-    background: #444;
+    background: #454545;
 }
 
 .tableBarChartWhite {
@@ -136,15 +139,15 @@ tablebarchartstack {
 }
 
 tablebarchartstack.dark {
-    color: #F9F9F9;
+    color: var(--furbox-background);
 }
 
 tablebarchartstack.light {
-    color: #444;
+    color: var(--site-text-colour);
 }
 
 tablebarchartstack.superlight {
-    color: #444;
+    color: var(--site-text-colour);
     box-sizing: border-box;
     border-top: 1px solid var(--whitegraph-bordercol);
     border-bottom: 1px solid var(--whitegraph-bordercol);
@@ -194,7 +197,7 @@ floatbox {
     display: block;
     margin: 10px 20px;
     padding: 0.5ex 1em;
-    background-color: #f9f9f9;
+    background-color: var(--furbox-background);
     box-sizing: border-box;
 }
 
@@ -214,6 +217,81 @@ td .colour_swatch {
     background-image: var(--rainbowbox);
 }
 
+
+/* BEGIN OF COLOURCHOOSER */
+
+colourchooser {
+    display: block;
+}
+
+/* The container */
+colourchooser .container {
+    display: inline-block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+colourchooser .container input {
+    display: none;
+    /*position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;*/
+}
+
+/* Create a custom checkbox */
+colourchooser .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 32px;
+    width: 32px;
+    background-color: #FF0000;
+    border: 1px solid rgba(0,0,0,0.5);
+    border-radius: 4px;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+colourchooser .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the checkmark when checked */
+colourchooser .container input:checked ~ .checkmark:after {
+    display: block;
+}
+
+/* Style the checkmark/indicator */
+colourchooser .container .checkmark:after {
+    left: 12px;
+    top: 8px;
+    width: 5px;
+    height: 10px;
+    border: solid var(--furbox-background);
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+colourchooser .container .checkmark[luminosity=light]:after {
+    border: solid var(--site-text-colour);
+    border-width: 0 3px 3px 0;
+}
+
+/* END OF COLOURCHOOSER */
+
+
 /* BEGIN OF FURBOX */
 
 furbox {
@@ -222,7 +300,7 @@ furbox {
     display: block;
     float: left;
     margin: 10px;
-    background-color: #f9f9f9;
+    background-color: var(--furbox-background);
     position: relative;
     box-sizing: border-box;
     max-width: 210px;
@@ -261,7 +339,7 @@ workshopbox {
     display: block;
     float: left;
     margin: 10px;
-    background-color: #f9f9f9;
+    background-color: var(--furbox-background);
     position: relative;
     box-sizing: border-box;
     width: calc(50% - 2*var(--gaps));
@@ -309,7 +387,7 @@ workshopbox > .infoBox > shopname {
     line-height: 14pt;
     font-size: 14pt;
     font-weight: 700;
-    color: #444;
+    color: var(--site-text-colour);
     margin: auto 0.5em;
 }
 
@@ -317,12 +395,12 @@ workshopbox > .infoBox > shopinfo {
     display: inline;
     line-height: 14pt;
     font-size: 12pt;
-    color: #444;
+    color: var(--site-text-colour);
     margin: auto 0.5em;
 }
 
 workshopbox > .infoBox > shopinfo > a {
-    color: #444;
+    color: var(--site-text-colour);
 }
 
 /* END OF WORKSHOPBOX */
@@ -342,7 +420,7 @@ bigfurbox {
     display: block;
     box-shadow: 0px 0px 64px rgba(0, 0, 0, 0.35);
     border-radius: 0 0 16px 0;
-    background-color: #f9f9f9;
+    background-color: var(--furbox-background);
     box-sizing: border-box;
     width: calc(min(900px,80vw));
     height: 600px;
@@ -402,7 +480,7 @@ bigfurbox copying {
     top: -17pt;
     font-size: 10pt;
     font-weight: 700;
-    color: #F9F9F9;
+    color: var(--furbox-background);
     text-shadow: -1px 1px 0 var(--textborder),
         1px 1px 0 var(--textborder),
         1px -1px 0 var(--textborder),
@@ -420,7 +498,7 @@ bigfurbox copying {
     padding: 0 20px 10px 20px;
     border-radius: 0 0 16px 0;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
-    background-color: #f9f9f9;
+    background-color: var(--furbox-background);
 }
 
 .chart_container {
@@ -439,11 +517,10 @@ bigfurbox copying {
 .flex_halfcol {
     flex: 50%;
 }
-.flex_halfcol:nth-child(2){ 
-}
+
 
 div#colour_scheme thead h5 {
-    color: #444;
+    color: var(--site-text-colour);
     font-weight: 700;
     font-size: 100%;
     margin: 2pt;
@@ -558,7 +635,7 @@ li.columngap > a {
 }
 .accordion label {
 /*     display:block */
-    color:#444;
+    color:var(--site-text-colour);
     cursor:pointer;
     font-weight: bold;
     font-size: 18px;
