--- a/style.css
+++ b/style.css
@@ -222,6 +222,8 @@ td .colour_swatch {
 
 colourchooser {
     display: block;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 /* The container */
