slightly blue-er indigo

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     --shopbannerimg-height: 50px;
     --gaps: 10px;
     --textborder: rgba(0,0,0,0.5);
-    --rainbowbox: linear-gradient(to right, #EC6A69,#F0994F,#CCAB13,#9ABA28,#59C36A,#00C6B7,#00BFE6,#96AAF6,#C89CE4,#DF6D9D,#EC6A69);
+    --rainbowbox: linear-gradient(to right, #EC6A69,#F0994F,#CCAB13,#9ABA28,#59C36A,#00C6B7,#36B9F1,#78A9FF,#C89CE4,#DF6D9D,#EC6A69);
     --whitegraph-bordercol: #CCC;
     --colour-swatch-size-outer: 36px;
     --colour-swatch-size-inner: 32px;
